publish quick change to template to test dependency

--- a/templates/notebookpage.mustache
+++ b/templates/notebookpage.mustache
@@ -7,5 +7,10 @@
 {{/path}}
 
 {{#description}}
-  <p><span class="label1">{{description}}</span></p>
+  <p>
+    test changes to mustache template:
+    <span class="label1">
+      {{description}}
+    </span>
+  </p>
 {{/description}}
