--- a/templates/notebookpage.mustache
+++ b/templates/notebookpage.mustache
@@ -1,19 +1,14 @@
-{{#image}}
-  <img src="{{image}}" class="thumbnail"/>
-{{/image}}
+{{#image}}<img src="{{image}}" class="thumbnail"/>{{/image}}
 
-<h3>
-  <a href="{{link}}" target="_blank" rel="noopener">{{title}}</a>
-</h3>
+<h3><a href="{{link}}" target="_blank" rel="noopener">{{title}}</a></h3>
 
 {{#path}}
-  <p>
-    <a href="{{link}}" target="_blank" rel="noopener">{{path}}</a>
-  </p>
+  <p><a href="{{link}}" target="_blank" rel="noopener">{{path}}</a></p>
 {{/path}}
 
 {{#description}}
   <p>
+    test changes to mustache template:
     <span class="label1">
       {{description}}
     </span>
