what am i doing how did i get here i am not good with computer

--- a/templates/notebookpage.mustache
+++ b/templates/notebookpage.mustache
@@ -16,8 +16,8 @@
 
 {{#path}}
   <p>
-    <sm>
+    <sub>
       <a href="{{link}}" target="_blank" rel="noopener">{{path}}</a>
-    </sm>
+    </sub>
   </p>
 {{/path}}
