make images clickable too

--- a/templates/notebookpage.mustache
+++ b/templates/notebookpage.mustache
@@ -1,5 +1,7 @@
 {{#image}}
-  <img src="{{image}}" class="thumbnail"/>
+  <a href="{{link}}" target="_blank" rel="noopener">
+    <img src="{{image}}" class="thumbnail"/>
+  </a>
 {{/image}}
 
 <h3>
